data component is valid